Adjusted README java options, sbt version and a typo for building scalactic.